# rust-sample-apps

samplecli/: Cargo.toml
samplecli/src/: main.rs
todo/: Cargo.toml  todo.db
todo/src/: main.rs
todo/templates/: index.html
ui_demo/: Cargo.toml
ui_demo/src/: main.rs
