[package]
name = "ui_demo"
version = "0.1.0"
authors = ["pipopotamasu <ec0156hx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2.0", features = ["async-std"] }
iced_native = "0.3.0"
iced_futures = "0.2.0"
async-std = { version = "1.6.1", features =["unstable"] }